# qverc

./: LICENSE
qverc/: .gitignore  .qvignore  Cargo.toml  README.md  qverc.toml
qverc/bootstrap/: README.md
qverc/bootstrap/scripts/: .gitkeep
qverc/src/: lib.rs  main.rs
qverc/src/cli/: checkout.rs  edit.rs  init.rs  log.rs  merge.rs  mod.rs  promote.rs  prune.rs  query.rs  squash.rs  status.rs  sync.rs  worktree.rs
qverc/src/core/: config.rs  graph.rs  mod.rs  node.rs
qverc/src/gatekeeper/: mod.rs  verify.rs
qverc/src/storage/: cas.rs  database.rs  mod.rs
qverc/vscode-qverc/: .gitignore  .vscodeignore  README.md  package.json
qverc/vscode-qverc/src/: commands.ts  cursorRule.ts  extension.ts  fileDecorator.ts  graphView.ts  qvercCli.ts  statusBar.ts  types.ts
